--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Memory Chain</title>
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root" style="background-color: #f4f4f4"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
